================================================
|                Version 0.6                   |
|                                              |
================================================
- UTF-8 support for languages;
- Russian translation added;
- Optimized text render code;
- Lowered delay times for battles;

================================================
|                Version 0.5                   |
|            Released: 2010-03-23              |
================================================
 - Radiobox filter at SkillWindow to only show race/class skills; 
 - Fixed a bug: Keep windows positions after map change;
 - Fixed a bug: Update inventoryWindow after receiveing an item from a dialog;
 - Capacity to walk through low height objects;
 - iaScripts can receive parameters;
 - Fixed a memory leak on bTrees;
 - Fixed a segfault at itemWindow;
 - Better cxSel selection/deselection;
 - Fixed continuous mouse move angle;
 - Added modifier effects (drink);
 - Use of new objects (narcotics);
 - New roll tests;
 - Fixed segfault when loading game with characterWindow opened;
 - iaScripts: accepting the use of - operator as 'signal change';
 - iaScripts: accepting literals as function parameters;
 - Setting initial animation state of models to a random value;
 - Always run option 'true' by default;
 - Fixed run toggle for A*;
 - Avoid too far away enemy NPCs act at a distant fight;
 - Fixed the save of NPCs position;
 - Keeping character related particles between maps;
 - 'Rest' action for party;
 - dntMapEditor: Key to toggle multitexture;
 - Two new missions;
 - New models;
 - New maps;

================================================
|                Version 0.4                   |
|            Released: 2009-06-22              |
================================================
 - New mission;
 - New maps;
 - New models;
 - In-game comic book objects (items);
 - Tutorial to the battle system (as a comic book);